[tool.poetry]
name = "chatwrap"
version = "0.4.0"
description = "A Python project for chat wrapping functionality"
authors = ["Stefan Bertici <stefan.bertici@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"